# web-spider

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/controllers/: image_controller.rs  mod.rs  page_controller.rs  page_node_controller.rs
src/crawler/: crawl.rs  crawler.rs  get_page_data.rs  get_urls_from_html.rs  mod.rs
src/database/: mod.rs  redis_client.rs
src/pages/: image.rs  mod.rs  page.rs  page_node.rs
src/utils/: constants.rs  is_valid_url.rs  mod.rs  normalize_url.rs  parse.rs  strip_url.rs
tests/: get_page_data_test.rs  get_urls_from_html_test.rs  is_valid_url_test.rs  normalize_url_test.rs  parse_test.rs  strip_url_test.rs
