[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2"
redis = { version = "0.23", features = ["aio", "cluster"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
