[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2"
redis = { version = "0.23", features = ["aio", "cluster", "tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
regex = "1"
scraper = "0.18"
log = "0.4"
